bug(settings,content): Follow up for in brand messaging
Because:
- A couple defects were noticed.
  - `start-0` was always being applied. And we only want this for RTL languages.
  - role="Link" was missing in one spot, so screen readers wouldn't work for Learn more link.
  - In mobile view some pages would overlap the messaging
  - In mobile view the 'X' icon would over overlap the text on some devices

This Commit:
- Adds `rtl:` and `ltr:` prefix to ensure x is on the right side
- some tricks with mobileLandscape prefix to ensure x doesn't overlap text on mobile
- some tricks with mobileLandscape prefix to ensure banner is fixed and sticky when render at top, and appended / inline rendered at bottom of page in mobile view.
- Removes a stray console.log
- Sets timeout to 0 for adding the brand-messaging class. A long timeout is not necessary.
- Default BRAND_MESSAGING_MODE to none, to avoid accidental rollout.

--- a/packages/fxa-content-server/app/styles/modules/_branding.scss
+++ b/packages/fxa-content-server/app/styles/modules/_branding.scss
@@ -92,12 +92,7 @@
         background: #000;
       }
     }
-  }
-
-  @include respond-to('small') {
-    top: initial;
-    bottom: 0;
-  }
+    }
 }
 /** Work around for sticky fixed banner */
 body.brand-messaging {
@@ -109,6 +104,7 @@ body.brand-messaging {
   body.brand-messaging {
     padding-top: inherit;
   }
+
 }
 .choose-what-to-sync {
   .success-email-created {
